# semantic-kernel-upload-file

./: .env.example  .gitignore  README.md  handoffOrchestration_uploadFile.py  pyproject.toml  sample_data.json  sample_orders.csv  semantic_kernel_upload_file.py
